--- a/Style.css
+++ b/Style.css
@@ -87,8 +87,8 @@ body{
     padding-left: 80px;
 }
 .about-img{
-    width: 120%;
-    height: 150%;
+    width: auto;
+    height: auto;
 }
 .services .card-body i {
 	font-size: 50px;
